--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
  
     <a-marker preset='hiro'>
 			<a-entity 
-			obj-model="obj: url(https://rishavjayswal.github.io/augmented-reality/resources/couch.obj); 
-			mtl: url(https://rishavjayswal.github.io/augmented-reality/resources/couch.mtl)">
+			obj-model="obj: url(https://raw.githubusercontent.com/scriptkittyx/501arjs/master/assets/501board.obj); 
+			mtl: url(https://raw.githubusercontent.com/scriptkittyx/501arjs/master/assets/501board.mtl)">
 	</a-entity>
     </a-marker>
 
